--- a/Portfolio-Project.html
+++ b/Portfolio-Project.html
@@ -33,7 +33,7 @@
          <h1>These are some of my projects</h1>
          <div class="projects">
         <a href="./Survey Form/Survery form.html" class="project-tile">
-            <img src="./Survey Form/Survery Preview.png" alt="Project 1">
+            <img src="./Survey Form/Survey Preview.png" alt="Project 1">
             <p><span>&lt;</span>Survey Form<span>/&gt;</span></p>
         </a>
         <a href="./Tribute Page/Tribute Page.html" class="project-tile">
