added tech doc links to tile

--- a/Portfolio-Project.html
+++ b/Portfolio-Project.html
@@ -40,9 +40,9 @@
             <img src="./Tribute Page/Tribute Page Preview.png" alt="Project 2">
             <p><span>&lt;</span>Tribute Page<span>/&gt;</span></p>
         </a>
-        <a href="" class="project-tile">
-            <img src="./fallguy.jpg" alt="Project 3">
-            <p><span>&lt;</span>Coming Soon...<span>/&gt;</span></p>
+        <a href="./Technical Document/technical-document.html" class="project-tile">
+            <img src="./Technical Document/technical-document-preview.png" alt="Project 3">
+            <p><span>&lt;</span>Technical Document<span>/&gt;</span></p>
         </a>
         <a href="" class="project-tile">
             <img src="./fallguy.jpg" alt="Project 4">
