--- a/Portfolio-Project.html
+++ b/Portfolio-Project.html
@@ -45,15 +45,15 @@
             <p><span>&lt;</span>Technical Document<span>/&gt;</span></p>
         </a>
         <a href="" class="project-tile">
-            <img src="./fallguy.jpg" alt="Project 4">
+            <img src="./skyline.png" alt="Project 4" class="skyline">
             <p><span>&lt;</span>Coming Soon...<span>/&gt;</span></p>
         </a>
         <a href="" class="project-tile">
-            <img src="./fallguy.jpg" alt="Project 5">
+            <img src="./skyline.png" alt="Project 5" class="skyline">
             <p><span>&lt;</span>Coming Soon...<span>/&gt;</span></p>
         </a>
         <a href="" class="project-tile">
-            <img src="./fallguy.jpg" alt="Project 6">
+            <img src="./skyline.png" alt="Project 6" class="skyline">
             <p><span>&lt;</span>Coming Soon...<span>/&gt;</span></p>
         </a>
         </div>
