--- a/Product Landing Page/product-landing-page.html
+++ b/Product Landing Page/product-landing-page.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Document</title>
+    <title>Product Landing Page</title>
 </head>
 <body>
-    
+    <header id="header">
+        <div class="logo">
+            <!--img logo here-->
+        </div>
+        <nav id="nav-bar">
+            <!--at least 3 ul here linking with each section-->
+            <ul>
+                <li><a class="nav-link" href="#features">Features</a></li>
+                <li><a class="nav-link" href="#video">Video</a></li>
+                <li><a class="nav-link" href="#pricing">Pricing</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="hero">
+       <h2>Fast. Efficient. TEA clears</h2>
+       <p>We can make you a perfect legend in no time...</p> 
+    </section>
+    <div class="container">
+        <section id="features">
+            <!--product features here-->
+        </section>
+        <section id="video">
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/TC5sS4sB0TA?si=QPEL2VlV1Ul3AGRw" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+        </section>
+        <section id="pricing">
+            <!--prices on different packages here & form-->
+        </section>
+        <footer>
+            <p>Made by Ryley Croucher @ Mar 2024</p>
+        </footer>
+    </div>
 </body>
 </html>
