added note at bottom

--- a/Product Landing Page/product-landing-page.html
+++ b/Product Landing Page/product-landing-page.html
@@ -125,7 +125,7 @@
             </form>
         </section>
         <footer>
-            <p>Made by Ryley Croucher @ Mar 2024</p>
+            <p>Made by Ryley Croucher for freeCodeCamp's curriculum @ Mar 2024</p>
         </footer>
 </body>
 </html>
